# almanac

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: calendar.rs  config.rs  date.rs  errors.rs  event.rs  events.rs  ics.rs  lib.rs  main.rs  periodic.rs
