[package]
name = "almanac"
version = "0.1.1"
authors = ["meskio <meskio@sindominio.net>"]
license = "GPL-3.0-or-later"
description = "Display calendar .ics in command line"
readme = "README.md"
homepage = "https://gitlab.com/meskio/almanac"
repository = "https://gitlab.com/meskio/almanac"
documentation = "https://docs.rs/almanac/"
keywords = ["calendar", "ics", "ical", "terminal", "console"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
itertools = "0.7"
colored = "1.6"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
dirs = "1.0"

[dependencies.ical]
version = "0.5.*"
default-features = false
features = ["ical"]
