[package]
name = "almanac"
version = "0.4.1"
authors = ["meskio <meskio@sindominio.net>"]
license = "GPL-3.0-or-later"
description = "Display calendar .ics in command line"
readme = "README.md"
homepage = "https://gitlab.com/meskio/almanac"
repository = "https://gitlab.com/meskio/almanac"
documentation = "https://docs.rs/almanac/"
keywords = ["calendar", "ics", "ical", "terminal", "console"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.8.3"
windows-timezones = { version = "0.2.1", features = ["chrono-tz"] }
itertools = "0.11.0"
colored = "2.0.1"
toml = "0.7.5"
serde = "1.0"
serde_derive = "1.0"
dirs = "5.0.1"
ical = { version = "0.8.0", default-features = false, features = ["ical"] }
